--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnString": "Server=DESKTOP-3P9I28U\\MATEUSZSQL; Database=WebApiDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
+  },
+  "ApplicationSettings": {
+    "JWT_Secret": "123dsa45678901234dsad561dsa@31!23465798",
+    "Client_URL": "http://localhost:4200"
   }
 }
